// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabOnceScreen renders text 1`] = `
<View
  onTouchEnd="toggleItOnce"
  style={
    Array [
      Object {
        "backgroundColor": "#fff",
      },
      Object {
        "alignItems": "center",
        "backgroundColor": "black",
        "flex": 1,
        "justifyContent": "center",
      },
    ]
  }
>
  <Text
    style={
      Object {
        "color": "white",
        "fontSize": 50,
      }
    }
  >
    Once
  </Text>
</View>
`;

exports[`TabOnceScreen renders text 2`] = `
<View
  onTouchEnd="toggleItTwice"
  style={
    Array [
      Object {
        "backgroundColor": "#fff",
      },
      Object {
        "alignItems": "center",
        "backgroundColor": "black",
        "flex": 1,
        "justifyContent": "center",
      },
    ]
  }
>
  <Text
    style={
      Object {
        "color": "white",
        "fontSize": 50,
      }
    }
  >
    Twice
  </Text>
</View>
`;
